# audiophage

./: .gitignore  README.md  audiophage.spec  list-audio-info.py  list-devices.py  package-audiophage.ps1  pyproject.toml  stream.py
core/: audio.py  audio_input.py  configuration.py  configuration_base.py  configuration_utilities.py  context.py  emojis.py  exceptions.py  state.py  utilities.py
data/: configuration.TEMPLATE.toml
libs/: README.md
